--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,13 +4,25 @@
 		http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 version="4.0" metadata-complete="true">
 
-		<servlet>
+<servlet>
 		<servlet-name>helloWorld</servlet-name>
-		<servlet-class>com.sjw.servlets.example.HelloWorldService</servlet-class>
-		</servlet>
-		
-		<servlet-mapping>
-			<servlet-name>helloWorld</servlet-name>
-			<url-pattern>/helloWorld</url-pattern>
-			</servlet-mapping>
+		<servlet-class>com.sjw.servlets.example.HelloWorldServlet</servlet-class>
+</servlet>
+
+<servlet>
+		<servlet-name>hello</servlet-name>
+		<servlet-class>com.sjw.servlets.example.HelloServlet</servlet-class>
+</servlet>
+	
+
+<servlet-mapping>
+		<servlet-name>helloWorld</servlet-name>
+		<url-pattern>/helloWorld</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+		<servlet-name>hello</servlet-name>
+		<url-pattern>/hello</url-pattern>
+</servlet-mapping>
+
 </web-app>
